# aiops-multi-agent-workshop

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.sh  check_alarm.sh  check_instance.sh  check_sg.sh  pre-requesite.sh  pyproject.toml  teardown_all.sh
_shared_debug/: __init__.py  event_dump.py  formatting.py  strands_hook.py
agents/change/runtime/: .dockerignore  Dockerfile  README.md  agentcore_runtime.py  deploy_runtime.py  teardown.sh
agents/change/shared/: agent.py
agents/incident/runtime/: .dockerignore  Dockerfile  README.md  agentcore_runtime.py  deploy_runtime.py  invoke_runtime.py  teardown.sh
agents/incident/shared/: agent.py
agents/incident_a2a/runtime/: .dockerignore  Dockerfile  README.md  agentcore_runtime.py  deploy_runtime.py  teardown.sh
agents/monitor/local/: run.py  run_local_import.py
agents/monitor/runtime/: .dockerignore  Dockerfile  README.md  agentcore_runtime.py  deploy_runtime.py  invoke_runtime.py  requirements.txt  teardown.sh  verify_c1.py
agents/monitor/shared/: __init__.py  agent.py  auth_local.py  env_utils.py  mcp_client.py  modes.py
agents/monitor_a2a/runtime/: .dockerignore  Dockerfile  README.md  agentcore_runtime.py  deploy_runtime.py  requirements.txt  teardown.sh
agents/monitor_a2a/shared/: agent.py  auth_local.py  env_utils.py
agents/operator/: README.md  cli.py
agents/supervisor/runtime/: .dockerignore  Dockerfile  README.md  agentcore_runtime.py  deploy_runtime.py  invoke_runtime.py  requirements.txt  teardown.sh
agents/supervisor/shared/: agent.py
data/mock/phase1/: alarm_history.py
data/runbooks/: README.md  payment-status-check.md
deployments/: README.md
docs/design/: biz_requirement.md  phase2.md  phase3.md  phase4.md  phase6a.md  plan_summary.md  resource.md
docs/design/_archive/: phase0_audit.md  plan.md  plan.v1-single-agent.md
docs/experiments/260424-auto-edit-experiment/: .env.example  README.md  invoke_cli.py  requirement.md  requirements.txt
docs/learn/: a2a_intro.md  debug_mode.md  env_config.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase5_detail.md  phase5_prompt_cache_effect.md  phase6.md  teardown.md  workshop_setup.md  workshop_setup_cloudshell.md
docs/research/: a2a_intro.md  agentcore_new_feature.md  phase5_prompt_cache_effect.md
docs/research/agent_registry/: pyproject.toml
docs/research/bedrock_mantle_iam/: README.md  mantle_assume_role.py  requirements.txt
incidents/: README.md
infra/cognito-gateway/: cleanup_gateway.py  cognito.yaml  deploy.sh  setup_gateway.py  teardown.sh
infra/ec2-simulator/: README.md  alarms.yaml  deploy.sh  ec2-simulator.yaml  teardown.sh
infra/ec2-simulator/chaos/: start_instance.sh  stop_instance.sh
infra/github-lambda/: README.md  deploy.sh  github_lambda.yaml  setup_github_target.py  teardown.sh
infra/phase0/: README.md  alarms.yaml  deploy.sh  ec2-simulator.yaml  teardown.sh
infra/phase2/: cleanup_gateway.py  cognito.yaml  deploy.sh  teardown.sh
infra/phase4/: README.md  deploy.sh  github_lambda.yaml  setup_github_target.py  teardown.sh
infra/phase6/: deploy.sh
infra/phase6a/: README.md  cognito_extras.yaml  deploy.sh  deployments_lambda.yaml  setup_deployments_target.py  teardown.sh
infra/s3-lambda/: README.md  deploy.sh  s3_lambda.yaml  setup_s3_target.py  teardown.sh
infra/vscode/: cloudformation.yaml  deploy.sh  setup-claude-bedrock.sh
runbooks/: README.md  payment-status-check.md
scripts/: bench_bedrock_cache.py  bench_session_id.py  format_cache_compare.py
setup/: store_github_token.sh
tests/: test_monitor.py
(+55 files in other folders)
